// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/table/TableRow should match snapshot 1`] = `
<div>
  <div
    class="TableRow octo-table-row"
    draggable="true"
    style="opacity: 1;"
  >
    <div
      class="action-cell octo-table-cell-btn"
    >
      <button
        class="IconButton"
        type="button"
      >
        <i
          class="CompassIcon icon-drag-vertical"
        />
      </button>
    </div>
    <div
      class="octo-table-cell title-cell"
      id="mainBoardHeader"
      style="width: 100px;"
    >
      <div
        class="octo-icontitle"
      >
        <div
          class="octo-icon"
        >
          i
        </div>
        <input
          class="Editable "
          placeholder="Untitled"
          spellcheck="true"
          title="title"
          value="title"
        />
      </div>
      <div
        aria-label="menuwrapper"
        class="MenuWrapper optionsMenu ml-2 mr-2"
        role="button"
      >
        <div
          class="octo-tooltip tooltip-top"
          data-tooltip="More actions"
        >
          <button
            aria-label="MenuBtn"
            class="IconButton"
            title="MenuBtn"
            type="button"
          >
            <i
              class="CompassIcon icon-dots-horizontal OptionsIcon"
            />
          </button>
        </div>
      </div>
      <div
        class="open-button"
      >
        <button
          class="Button"
          type="button"
        >
          <span>
            Open
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/table/TableRow should match snapshot, collapsed tree 1`] = `
<div>
  <div
    class="TableRow octo-table-row hidden"
    draggable="true"
    style="opacity: 1;"
  >
    <div
      class="action-cell octo-table-cell-btn"
    >
      <button
        class="IconButton"
        type="button"
      >
        <i
          class="CompassIcon icon-drag-vertical"
        />
      </button>
    </div>
    <div
      class="octo-table-cell title-cell"
      id="mainBoardHeader"
      style="width: 100px;"
    >
      <div
        class="octo-icontitle"
      >
        <div
          class="octo-icon"
        >
          i
        </div>
        <input
          class="Editable "
          placeholder="Untitled"
          spellcheck="true"
          title="title"
          value="title"
        />
      </div>
      <div
        aria-label="menuwrapper"
        class="MenuWrapper optionsMenu ml-2 mr-2"
        role="button"
      >
        <div
          class="octo-tooltip tooltip-top"
          data-tooltip="More actions"
        >
          <button
            aria-label="MenuBtn"
            class="IconButton"
            title="MenuBtn"
            type="button"
          >
            <i
              class="CompassIcon icon-dots-horizontal OptionsIcon"
            />
          </button>
        </div>
      </div>
      <div
        class="open-button"
      >
        <button
          class="Button"
          type="button"
        >
          <span>
            Open
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/table/TableRow should match snapshot, display properties 1`] = `
<div>
  <div
    class="TableRow octo-table-row"
    draggable="true"
    style="opacity: 1;"
  >
    <div
      class="action-cell octo-table-cell-btn"
    >
      <button
        class="IconButton"
        type="button"
      >
        <i
          class="CompassIcon icon-drag-vertical"
        />
      </button>
    </div>
    <div
      class="octo-table-cell title-cell"
      id="mainBoardHeader"
      style="width: 100px;"
    >
      <div
        class="octo-icontitle"
      >
        <div
          class="octo-icon"
        >
          i
        </div>
        <input
          class="Editable "
          placeholder="Untitled"
          spellcheck="true"
          title="title"
          value="title"
        />
      </div>
      <div
        aria-label="menuwrapper"
        class="MenuWrapper optionsMenu ml-2 mr-2"
        role="button"
      >
        <div
          class="octo-tooltip tooltip-top"
          data-tooltip="More actions"
        >
          <button
            aria-label="MenuBtn"
            class="IconButton"
            title="MenuBtn"
            type="button"
          >
            <i
              class="CompassIcon icon-dots-horizontal OptionsIcon"
            />
          </button>
        </div>
      </div>
      <div
        class="open-button"
      >
        <button
          class="Button"
          type="button"
        >
          <span>
            Open
          </span>
        </button>
      </div>
    </div>
    <div
      class="octo-table-cell"
      style="width: 100px;"
    >
      <div
        class="octo-propertyvalue"
        data-testid="select-non-editable"
        tabindex="0"
      >
        <span
          class="Label propColorBrown "
        >
          <span
            class="Label-text"
          >
            value 1
          </span>
        </span>
      </div>
    </div>
    <div
      class="octo-table-cell"
      style="width: 100px;"
    >
      <div
        class="octo-propertyvalue"
        data-testid="select-non-editable"
        tabindex="0"
      >
        <span
          class="Label empty "
        >
          <span
            class="Label-text"
          />
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/table/TableRow should match snapshot, isSelected 1`] = `
<div>
  <div
    class="TableRow octo-table-row selected"
    draggable="true"
    style="opacity: 1;"
  >
    <div
      class="action-cell octo-table-cell-btn"
    >
      <button
        class="IconButton"
        type="button"
      >
        <i
          class="CompassIcon icon-drag-vertical"
        />
      </button>
    </div>
    <div
      class="octo-table-cell title-cell"
      id="mainBoardHeader"
      style="width: 100px;"
    >
      <div
        class="octo-icontitle"
      >
        <div
          class="octo-icon"
        >
          i
        </div>
        <input
          class="Editable "
          placeholder="Untitled"
          spellcheck="true"
          title="title"
          value="title"
        />
      </div>
      <div
        aria-label="menuwrapper"
        class="MenuWrapper optionsMenu ml-2 mr-2"
        role="button"
      >
        <div
          class="octo-tooltip tooltip-top"
          data-tooltip="More actions"
        >
          <button
            aria-label="MenuBtn"
            class="IconButton"
            title="MenuBtn"
            type="button"
          >
            <i
              class="CompassIcon icon-dots-horizontal OptionsIcon"
            />
          </button>
        </div>
      </div>
      <div
        class="open-button"
      >
        <button
          class="Button"
          type="button"
        >
          <span>
            Open
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/table/TableRow should match snapshot, read-only 1`] = `
<div>
  <div
    class="TableRow octo-table-row readonly"
    draggable="true"
    style="opacity: 1;"
  >
    <div
      class="action-cell octo-table-cell-btn"
    />
    <div
      class="octo-table-cell title-cell"
      id="mainBoardHeader"
      style="width: 100px;"
    >
      <div
        class="octo-icontitle"
      >
        <div
          class="octo-icon"
        >
          i
        </div>
        <input
          class="Editable readonly "
          placeholder="Untitled"
          readonly=""
          spellcheck="true"
          title="title"
          value="title"
        />
      </div>
      <div
        class="open-button"
      >
        <button
          class="Button"
          type="button"
        >
          <span>
            Open
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/table/TableRow should match snapshot, resizing column 1`] = `
<div>
  <div
    class="TableRow octo-table-row"
    draggable="true"
    style="opacity: 1;"
  >
    <div
      class="action-cell octo-table-cell-btn"
    >
      <button
        class="IconButton"
        type="button"
      >
        <i
          class="CompassIcon icon-drag-vertical"
        />
      </button>
    </div>
    <div
      class="octo-table-cell title-cell"
      id="mainBoardHeader"
      style="width: 100px;"
    >
      <div
        class="octo-icontitle"
      >
        <div
          class="octo-icon"
        >
          i
        </div>
        <input
          class="Editable "
          placeholder="Untitled"
          spellcheck="true"
          title="title"
          value="title"
        />
      </div>
      <div
        aria-label="menuwrapper"
        class="MenuWrapper optionsMenu ml-2 mr-2"
        role="button"
      >
        <div
          class="octo-tooltip tooltip-top"
          data-tooltip="More actions"
        >
          <button
            aria-label="MenuBtn"
            class="IconButton"
            title="MenuBtn"
            type="button"
          >
            <i
              class="CompassIcon icon-dots-horizontal OptionsIcon"
            />
          </button>
        </div>
      </div>
      <div
        class="open-button"
      >
        <button
          class="Button"
          type="button"
        >
          <span>
            Open
          </span>
        </button>
      </div>
    </div>
    <div
      class="octo-table-cell"
      style="width: 100px;"
    >
      <div
        class="octo-propertyvalue"
        data-testid="select-non-editable"
        tabindex="0"
      >
        <span
          class="Label propColorBrown "
        >
          <span
            class="Label-text"
          >
            value 1
          </span>
        </span>
      </div>
    </div>
    <div
      class="octo-table-cell"
      style="width: 100px;"
    >
      <div
        class="octo-propertyvalue"
        data-testid="select-non-editable"
        tabindex="0"
      >
        <span
          class="Label empty "
        >
          <span
            class="Label-text"
          />
        </span>
      </div>
    </div>
  </div>
</div>
`;
